src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__uint32__cast_uint32_to_uint16__impl.snap
---
source: src/expr/src/scalar/func/impls/uint32.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: UInt16,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: UInt16,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastUint16ToUint32(
            CastUint16ToUint32,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
